--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
     //edittext library https://github.com/ChaosLeung/PinView
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
