--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name="kr.foorun.core.CustomApplication"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +19,9 @@
         android:theme="@style/Theme.UNIEAT"
         tools:targetApi="33">
 
+        <!--        kakao map       -->
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="5fd54357215a25a942cfa3b7d999cacc"/>
+
         <activity
             android:name=".feature.map.bottom_sheet.shop_detail.ShopDetailActivity"
             android:exported="false">
@@ -23,7 +29,8 @@
 
         <activity
             android:name=".feature.map.MapActivity"
-            android:exported="false"/>
+            android:exported="false">
+        </activity>
 
         <activity
             android:name=".feature.main.MainActivity"
