--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -62,6 +62,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // Ted Permission - RxJava3
+    implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
     //livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 
