--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+
     // Ted Permission - RxJava3
     implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.0'
