--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,31 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="kr.foorun.presentation">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <application
-        android:name="kr.foorun.core.CustomApplication"
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.UNIEAT"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="33">
-        <!-- kakao map -->
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="5fd54357215a25a942cfa3b7d999cacc" />
-
+    <application>
         <activity
-            android:name=".feature.main.MainActivity"
+            android:name="kr.foorun.uni_eat.feature.main.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,5 +12,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
