--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    namespace 'kr.foorun.core'
+    namespace 'kr.foorun.domain'
     compileSdk 33
 
     defaultConfig {
