--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+
+    //SwipeRefreshLayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     //viewpager2
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
 
