--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    // 카카오 로그인
+    implementation "com.kakao.sdk:v2-user:2.13.0"
+
     //hilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-android-compiler:2.41"
