--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.unsafe.configuration-cache=true
+
+kakao.key="5fd54357215a25a942cfa3b7d999cacc"
