--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.unsafe.configuration-cache=true
 
-kakao.key=5fd54357215a25a942cfa3b7d999cacc
+kakao.key=nothing
